--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -20,13 +20,13 @@
    <string>File Selection</string>
   </property>
   <property name="windowOpacity">
-   <double>0.600000000000000</double>
+   <double>0.800000000000000</double>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="1" colspan="2">
-      <widget class="QLineEdit" name="filenameInput"/>
+      <widget class="QLineEdit" name="fileNameInput"/>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
