--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -48,6 +48,13 @@
        </property>
       </widget>
      </item>
+     <item row="2" column="2">
+      <widget class="QPushButton" name="camButton">
+       <property name="text">
+        <string>Opencv Feed</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
