--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -53,6 +53,9 @@
        <property name="text">
         <string>Opencv Feed</string>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
     </layout>
