--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>240</width>
-    <height>80</height>
+    <width>166</width>
+    <height>146</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>File Selection</string>
+   <string>Select Input</string>
   </property>
   <property name="windowOpacity">
    <double>0.800000000000000</double>
@@ -25,17 +25,7 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="1" colspan="2">
-      <widget class="QLineEdit" name="fileNameInput"/>
-     </item>
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>File Name</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
       <widget class="QPushButton" name="filePushButton">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -44,17 +34,34 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Load File</string>
+        <string>Load Picture</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
+     <item row="2" column="0">
       <widget class="QPushButton" name="camButton">
        <property name="text">
         <string>Opencv Feed</string>
        </property>
        <property name="checkable">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>AVT Feed</string>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="text">
+        <string>Load Movie</string>
        </property>
       </widget>
      </item>
