Added playback dialog with icons
Due to this, some changes were made throughout to allow a correct
functioning of the stop button. Other buttons not yet working.
No trackbar present as well.

--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -44,7 +44,7 @@
         <string>Opencv Feed</string>
        </property>
        <property name="checkable">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
