--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -59,7 +59,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="MovieButton">
        <property name="text">
         <string>Load Movie</string>
        </property>
