--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -35,7 +35,7 @@
        </property>
        <property name="icon">
         <iconset resource="icons.qrc">
-         <normaloff>:/new/svg/icons/media-skip-backward.svg</normaloff>:/new/svg/icons/media-skip-backward.svg</iconset>
+         <normaloff>:/new/png/icons/gtk-media-forward-rtl.png</normaloff>:/new/png/icons/gtk-media-forward-rtl.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -52,7 +52,7 @@
        </property>
        <property name="icon">
         <iconset resource="icons.qrc">
-         <normaloff>:/new/svg/icons/media-playback-stop.svg</normaloff>:/new/svg/icons/media-playback-stop.svg</iconset>
+         <normaloff>:/new/png/icons/gtk-media-stop.png</normaloff>:/new/png/icons/gtk-media-stop.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -77,8 +77,8 @@
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset>
-         <normaloff>../ICONS/media-playback-start.svg</normaloff>../ICONS/media-playback-start.svg</iconset>
+        <iconset resource="icons.qrc">
+         <normaloff>:/new/png/icons/gtk-media-play-ltr.png</normaloff>:/new/png/icons/gtk-media-play-ltr.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -91,14 +91,14 @@
      <item>
       <widget class="QToolButton" name="ffwdButton">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>...</string>
        </property>
        <property name="icon">
         <iconset resource="icons.qrc">
-         <normaloff>:/new/svg/icons/media-seek-forward.svg</normaloff>:/new/svg/icons/media-seek-forward.svg</iconset>
+         <normaloff>:/new/png/icons/gtk-media-forward-ltr.png</normaloff>:/new/png/icons/gtk-media-forward-ltr.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -114,8 +114,8 @@
         <string>...</string>
        </property>
        <property name="icon">
-        <iconset>
-         <normaloff>../ICONS/media-record.svg</normaloff>../ICONS/media-record.svg</iconset>
+        <iconset resource="icons.qrc">
+         <normaloff>:/new/png/icons/gtk-media-record.png</normaloff>:/new/png/icons/gtk-media-record.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -138,7 +138,7 @@
         <enum>Qt::LeftToRight</enum>
        </property>
        <property name="text">
-        <string>0</string>
+        <string>20</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
