--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -139,6 +139,9 @@
          <height>32</height>
         </size>
        </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
