--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>440</width>
+    <width>435</width>
     <height>44</height>
    </rect>
   </property>
@@ -168,6 +168,16 @@
            <property name="text">
             <string>...</string>
            </property>
+           <property name="icon">
+            <iconset resource="icons.qrc">
+             <normaloff>:/new/png/icons/gtk-properties.png</normaloff>:/new/png/icons/gtk-properties.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -214,6 +224,16 @@
            <property name="text">
             <string>...</string>
            </property>
+           <property name="icon">
+            <iconset resource="icons.qrc">
+             <normaloff>:/new/png/icons/gtk-go-back-ltr.png</normaloff>:/new/png/icons/gtk-go-back-ltr.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -224,17 +244,49 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="RecFolder"/>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton">
            <property name="text">
             <string>...</string>
            </property>
+           <property name="icon">
+            <iconset resource="icons.qrc">
+             <normaloff>:/new/png/icons/gtk-open.png</normaloff>:/new/png/icons/gtk-open.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBox"/>
+          <widget class="QComboBox" name="comboBox">
+           <property name="minimumSize">
+            <size>
+             <width>110</width>
+             <height>0</height>
+            </size>
+           </property>
+           <item>
+            <property name="text">
+             <string>MSMPEG4V2</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>FMF</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>XVID</string>
+            </property>
+           </item>
+          </widget>
          </item>
         </layout>
        </widget>
