--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -116,7 +116,7 @@
             <bool>true</bool>
            </property>
            <property name="checked">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
           </widget>
          </item>
