First version of AVT source
timestamp not yet implemented. Only in mono8 and for a single connected
camera. The image is also cloned, this could probably be avoided.

--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>126</width>
-    <height>194</height>
+    <height>230</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -50,7 +50,7 @@
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="AvtButton">
        <property name="text">
         <string>AVT Feed</string>
        </property>
