Regexsourcesink is now capable of writing out into separate images (png, bmp or jpg)
When choosing the png/bmp/jpg codec, the frames are now written out as
separate images in the format image-12345678.png. This format cannot be
changed through the gui, so choose different folders to separate them.

--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -282,6 +282,16 @@
            </item>
            <item>
             <property name="text">
+             <string>PNG</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>BMP</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
              <string>MSMPEG4V2</string>
             </property>
            </item>
@@ -293,6 +303,11 @@
            <item>
             <property name="text">
              <string>RAW</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>JPG</string>
             </property>
            </item>
           </widget>
