--- a/cameracontrolsdialog.ui
+++ b/cameracontrolsdialog.ui
@@ -26,6 +26,9 @@
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
+     <property name="keyboardTracking">
+      <bool>false</bool>
+     </property>
      <property name="maximum">
       <number>9999999</number>
      </property>
