--- a/cameracontrolsdialog.ui
+++ b/cameracontrolsdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>152</height>
+    <width>417</width>
+    <height>111</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,13 +21,44 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="4">
+   <item row="4" column="0">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="text">
+      <string>Set ROI</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QPushButton" name="IntensityButton">
+     <property name="text">
+      <string>Max Intensity</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="FitRangeButton">
+     <property name="text">
+      <string>Fit Range</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QPushButton" name="FitMeanButton">
+     <property name="text">
+      <string>Fit Mean</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
     <widget class="QSpinBox" name="shutterSpinBox">
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
      <property name="keyboardTracking">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="maximum">
       <number>9999999</number>
@@ -40,27 +71,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="3">
-    <widget class="QLabel" name="label_4">
-     <property name="text">
-      <string>x</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="4">
-    <widget class="QLineEdit" name="ROICols"/>
-   </item>
-   <item row="4" column="0">
-    <widget class="QPushButton" name="pushButton_2">
-     <property name="text">
-      <string>Set ROI</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="4">
+   <item row="2" column="3">
     <widget class="QLabel" name="IntensLabel">
      <property name="text">
       <string>0</string>
@@ -70,36 +81,25 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="2">
+   <item row="4" column="1">
     <widget class="QLineEdit" name="ROIRows"/>
    </item>
-   <item row="2" column="0">
-    <widget class="QPushButton" name="IntensityButton">
+   <item row="4" column="2">
+    <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Max Intensity</string>
+      <string>x</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QPushButton" name="FitRangeButton">
-     <property name="text">
-      <string>Fit Range</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1" colspan="2">
-    <widget class="QPushButton" name="FitMeanButton">
-     <property name="text">
-      <string>Fit Mean</string>
-     </property>
-    </widget>
+   <item row="4" column="3">
+    <widget class="QLineEdit" name="ROICols"/>
    </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>shutterSpinBox</tabstop>
-  <tabstop>ROIRows</tabstop>
-  <tabstop>ROICols</tabstop>
   <tabstop>pushButton_2</tabstop>
  </tabstops>
  <resources/>
