--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -190,7 +190,7 @@
          <item>
           <widget class="QLineEdit" name="fpsEdit">
            <property name="toolTip">
-            <string extracomment="This is the time between successive images"/>
+            <string extracomment="This is the time between successive images. If you want to give a fps value in Hz, then simply type &quot;1/fps&quot; and it will be transformed."/>
            </property>
            <property name="layoutDirection">
             <enum>Qt::LeftToRight</enum>
