--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>513</width>
-    <height>90</height>
+    <height>91</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -350,7 +350,7 @@
            <enum>Qt::RightToLeft</enum>
           </property>
           <property name="text">
-           <string>Frame -/-</string>
+           <string>Framenumber</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
