--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>126</width>
+    <width>127</width>
     <height>230</height>
    </rect>
   </property>
@@ -42,7 +42,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="6" column="0">
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>Exit App</string>
@@ -55,7 +55,7 @@
         <string>AVT Feed</string>
        </property>
        <property name="checkable">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -72,7 +72,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -84,6 +84,16 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="4" column="0">
+      <widget class="QPushButton" name="vimbaButton">
+       <property name="text">
+        <string>Vimba Feed</string>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
