Colour cameras working in Vimba
But only BayerRG8 mode is working for the moment. Raw pixel data is
stored to file but debayered image is shown on the screen. Also Mono8
mode of such cameras is working as before obviously.

--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>571</width>
-    <height>100</height>
+    <height>102</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,16 @@
    <property name="spacing">
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -199,7 +208,16 @@
                <property name="spacing">
                 <number>0</number>
                </property>
-               <property name="margin">
+               <property name="leftMargin">
+                <number>0</number>
+               </property>
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="rightMargin">
+                <number>0</number>
+               </property>
+               <property name="bottomMargin">
                 <number>0</number>
                </property>
                <item>
@@ -224,7 +242,7 @@
                   <number>1</number>
                  </property>
                  <property name="maximum">
-                  <number>69</number>
+                  <number>89</number>
                  </property>
                  <property name="value">
                   <number>19</number>
