--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>571</width>
-    <height>102</height>
+    <height>103</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -333,6 +333,11 @@
               <item>
                <property name="text">
                 <string>FMF</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>HDF5</string>
                </property>
               </item>
               <item>
