--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -179,6 +179,26 @@
              </widget>
             </item>
             <item>
+             <widget class="QToolButton" name="recTimedButton">
+              <property name="text">
+               <string>...</string>
+              </property>
+              <property name="icon">
+               <iconset resource="icons.qrc">
+                <normaloff>:/new/png/icons/gtk-media-record-timed.png</normaloff>:/new/png/icons/gtk-media-record-timed.png</iconset>
+              </property>
+              <property name="iconSize">
+               <size>
+                <width>32</width>
+                <height>32</height>
+               </size>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QToolButton" name="RecSettings">
               <property name="text">
                <string>...</string>
