--- a/fileinputdialog.ui
+++ b/fileinputdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>127</width>
-    <height>230</height>
+    <height>330</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -42,7 +42,7 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="7" column="0">
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>Exit App</string>
@@ -72,7 +72,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="6" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -92,6 +92,13 @@
        </property>
        <property name="checkable">
         <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="0">
+      <widget class="QPushButton" name="idsButton">
+       <property name="text">
+        <string>Ids Feed</string>
        </property>
       </widget>
      </item>
