IDS µEye camera fully supported
* Fixed shutdown bug (needed sleep)
* Only on Linux for the moment
* Needs installed SDK to function
* No bufferqueue for the moment
* No ROI as well.
* Pixelclock and subsampling set in code, no GUI variables

--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -350,6 +350,9 @@
                 <height>0</height>
                </size>
               </property>
+              <property name="currentIndex">
+               <number>1</number>
+              </property>
               <item>
                <property name="text">
                 <string>FMF</string>
