--- a/cameracontrolsdialog.ui
+++ b/cameracontrolsdialog.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>417</width>
-    <height>111</height>
+    <width>468</width>
+    <height>125</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Camera Controls</string>
+  </property>
+  <property name="windowOpacity">
+   <double>0.800000000000000</double>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
@@ -26,6 +29,9 @@
      <property name="enabled">
       <bool>true</bool>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
       <string>Reset ROI</string>
      </property>
@@ -33,6 +39,9 @@
    </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="IntensityButton">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
       <string>Analyze Image</string>
      </property>
@@ -40,6 +49,9 @@
    </item>
    <item row="0" column="2">
     <widget class="QPushButton" name="FitRangeButton">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
       <string>Fit Range</string>
      </property>
@@ -47,6 +59,9 @@
    </item>
    <item row="0" column="3">
     <widget class="QPushButton" name="FitMeanButton">
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="text">
       <string>Fit Mean</string>
      </property>
