--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>571</width>
+    <width>577</width>
     <height>103</height>
    </rect>
   </property>
@@ -160,6 +160,9 @@
             </item>
             <item>
              <widget class="QToolButton" name="snapshotButton">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
               <property name="text">
                <string>...</string>
               </property>
