--- a/playbackdialog.ui
+++ b/playbackdialog.ui
@@ -161,7 +161,7 @@
             <item>
              <widget class="QToolButton" name="snapshotButton">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="text">
                <string>...</string>
