--- a/marangonitrackingdialog.ui
+++ b/marangonitrackingdialog.ui
@@ -26,17 +26,17 @@
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0" colspan="4">
+     <widget class="QCheckBox" name="activateBox">
+      <property name="text">
+       <string>Activate Processing</string>
+      </property>
+     </widget>
+    </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>Y-Position</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="3">
-     <widget class="QCheckBox" name="activateBox">
-      <property name="text">
-       <string>Activate Processing</string>
       </property>
      </widget>
     </item>
@@ -47,14 +47,14 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="3" alignment="Qt::AlignHCenter">
+    <item row="2" column="0" colspan="4" alignment="Qt::AlignHCenter">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Target Location</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
+    <item row="3" column="3">
      <widget class="QSlider" name="horPosition">
       <property name="value">
        <number>50</number>
@@ -64,7 +64,7 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="0" colspan="3">
+    <item row="5" column="0" colspan="4">
      <widget class="QPushButton" name="trackButton">
       <property name="focusPolicy">
        <enum>Qt::NoFocus</enum>
@@ -77,13 +77,22 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="2">
-     <widget class="QSlider" name="vertPosition">
+    <item row="1" column="2" colspan="2">
+     <widget class="QSlider" name="thresholdSlider">
+      <property name="maximum">
+       <number>255</number>
+      </property>
+      <property name="pageStep">
+       <number>1</number>
+      </property>
       <property name="value">
-       <number>50</number>
+       <number>100</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="tickPosition">
+       <enum>QSlider::NoTicks</enum>
       </property>
      </widget>
     </item>
@@ -94,16 +103,20 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1" colspan="2">
-     <widget class="QSlider" name="thresholdSlider">
-      <property name="pageStep">
-       <number>1</number>
-      </property>
+    <item row="4" column="3">
+     <widget class="QSlider" name="vertPosition">
       <property name="value">
        <number>50</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="threshEdit">
+      <property name="text">
+       <string>100</string>
       </property>
      </widget>
     </item>
